# hera_mc

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  INSTALL.md  MANIFEST.in  PARTS.md  README.md  alembic.ini  database_setup.md  environment.yaml  pyproject.toml  setup.cfg  setup.py  slim-notes.txt
.github/: .codecov.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish-to-test-pypi.yml  testsuite.yml
Deprecated/: convert_file_gps.py  fem_swap.py  move_paper_feed.py  pam_swap.py  renumber_ants.py  stop_all_C7.py
Docs/: cm.tex  cm_epoch2.tex  cm_manual.tex  developer.md  hookup.graffle  hookup_epoch1.graffle  hookup_epoch2.graffle  mc_definition.tex  redis_correlator_keys.tex  site_operations.md  time_conversion_function  weather_sensor_details.txt
alembic/: env.py
alembic/versions/: 1979f223bfbc_add_snap_feng_init_status.py  1bb1633d40a2_add_autocorrelation_spectrum_table.py  1bf3ac824a22_redo_correlator_interface.py  2d3d5723f499_include_autocorr_array.py  352d10955565_add_rosetta_table.py  387d68a970aa_add_autocorrelation_spectrum_table.py  38aa03a7c923_add_weather_table.py  38fdb8a21fd2_internal_correlator_file_tracking.py  3d3c72ecbc0d_add_rtp_task_resource_record_table.py  3e86ac6195d8_increase_size_of_lib_files_filename.py  40a641ef2f52_add_node_control.py  4653b4902dc0_add_subsystem_error_table.py  50c966c5427a_more_antenna_stats.py  5b141f32ea38_remove_bad_autoincrements.py  5fbb4d08569a_add_correlator_and_snap_version_info.py  5feda4ca9935_add_rtp_task_multiple_process_event_table.py  63b625cf7b06_add_white_rabbit_status.py  6496fb7766e3_added_new_apriori_antenna_table.py  64bc793c6237_added_dubitable.py  64c7a405e4c8_add_corr_config_tables.py  67e70aa050ed_more_snap_info.py  68041e36e11b_adding_new_heraautos_table.py  69d2f817e7e7_made_comment_part_of_part_info_primary_.py  72037abf4fcf_add_task_name_column_to_rtpprocessevent.py  7463268309ab_add_part_rosetta_table.py  74e327e433c9_add_time_views.py  77c082c87844_add_correlator_config_detailed_tables.py  8e7282ae4840_updated_rtp_tables.py  930461f19324_added_autocorrelations_to_antennastatus.py  93ff199763ac_update_lib_raid_errors_table.py  9460cc78cb50_add_correlator_control.py  94e1ae982b64_.py  9d9af47e64c8_add_rtptaskprocessevent_table.py  9e208dfd0778_add_correlator_config_table.py  a3d144cdc527_add_nodes.py  a42f5c04610f_added_apriori_antenna_table.py  a68c0e31204e_onsite_baseline_july_2017.py  a9d4b7805c75_add_correlator_catcher_file.py  ad1f2d2704c2_redo_correlator_interface.py  b022867d09e3_changed_library_file_to_reference_in_.py  (+23 more)
ci/: example_config.json  hera_mc_test.yaml  install_conda.sh  linting.yaml  min_deps.yaml  min_versions.yaml  publish.yml  tests.yaml  tests_py2.yaml
daemons/: correlator_status.systemd  mc_listen_to_corr_logger.systemd  mc_monitor_daemons.systemd  node_status.systemd  server-status.systemd  server-status.upstart
db_dumps/: geo_location.sql
docs/: cm_75ohm_legacy.tex  developer.md  mc_definition.tex  redis_correlator_keys.tex  site_operations.md  time_conversion_function
hera_mc/: __init__.py  args4testing.py  args_test.py  autocorrelations.py  branch_scheme.py  cm_active.py  cm_dataview.py  cm_dossier.py  cm_gen_sqlite.py  cm_handling.py  cm_health.py  cm_hookup.py  cm_part_revisions.py  cm_partconnect.py  cm_redis_corr.py  cm_revisions.py  cm_sysdef.py  cm_sysfunc.py  cm_sysutils.py  cm_table_info.py  cm_transfer.py  cm_utils.py  connections.py  corr_handling.py  correlator.py  correlator_levels.py  daemon_status.py  db_check.py  db_connect.py  db_setup.py  geo_handling.py  geo_location.py  geo_locations.py  geo_sysdef.py  host_status.py  librarian.py  mc.py  mc_session.py  node.py  obs.py  (+15 more)
hera_mc/data/: HERA_350.txt  __init__.py  convert_file_gps.py  initialization_base_data_connections.csv  initialization_base_data_geo_location.csv  initialization_base_data_part_info.csv  initialization_base_data_parts_paper.csv  initialization_base_data_station_meta.csv  initialization_base_data_station_type.csv  initialization_data_connections.csv  initialization_data_geo_location.csv  initialization_data_part_info.csv  initialization_data_parts_paper.csv  initialization_data_station_meta.csv  initialization_data_station_type.csv  levels.tst  nodes.txt  sysdef.json
hera_mc/tests/: __init__.py  conftest.py  test_autocorrelations.py  test_cm_transfer.py  test_cm_utils.py  test_connections.py  test_corr_handling.py  test_correlator.py  test_daemon_status.py  test_dataview.py  test_db_check.py  test_default_db_schema.py  test_geo_location.py  test_geo_locations.py  test_host_status.py  test_librarian.py  test_mc.py  test_node.py  test_obs.py  test_observations.py  test_parts.py  test_qm.py  test_roach.py  test_rtp.py  test_server_status.py  (+9 more)
scripts/: Tmon.py  add_ant_metrics_file.py  add_connection.py  add_part.py  add_part_info.py  add_part_rosetta.py  add_qm_metrics.py  add_rtp_process_event.py  add_rtp_process_record.py  add_rtp_task_jobid.py  add_rtp_task_resource_records.py  add_station.py  check_db_config.py  chk_revisions.py  cm_gps.py  cm_healthcheck.py  cm_init.py  cm_initialization.py  cm_node.py  cm_pack.py  cm_package.py  cm_part_info.py  cm_region.py  cm_revcheck.py  cm_revisions.py  cm_show_log.py  cm_syslog.py  cmdv.py  cmsyslog.py  correlator_control.py  dossier.py  fem_swap.py  geo.py  hera_mini_snap_data_catcher.py  hookup.py  initialize_connections.py  initialize_geo_locations.py  initialize_part_numbers.py  initialize_station_meta.py  install_part.py  (+62 more)
src/: mc_decl_insert.py  mc_declarative.py  mc_obs.py
systemd/: mc_listen_to_corr_logger.systemd  mc_monitor_daemons.systemd  server-status.systemd
tests/: __init__.py  conftest.py  test_autocorrelations.py  test_cm_transfer.py  test_cm_utils.py  test_connections.py  test_correlator.py  test_daemon_status.py  test_db_check.py  test_default_db_schema.py  test_geo_location.py  test_librarian.py  test_node.py  test_observations.py  test_parts.py  test_qm.py  test_rtp.py  test_server_status.py  test_subsystem_error.py  test_sysutils.py  test_utils.py  test_weather.py
(+41 files in other folders)
