[metadata]
description-file = README.md

[aliases]
test=pytest

[tool:pytest]
addopts = --ignore=scripts

[flake8]
ignore = W503
per-file-ignores =
    alembic/*.py: B,C,E,W,T4,B9,F,D
    scripts/*.py: D
    hera_mc/tests/*.py: D
docstring-convention = numpy
select = B,C,E,W,T4,B9,F,D
max-line-length = 100
# should add `D` to the above list when we've fully
# moved to numpy style docstrings.
# List of other checks to consider adding:
# it's recommended to have max-complexity ~ 18
# max-complexity = 18
# flake8-quotes
# flake8-comprehensions
# flake8-black
# flake8-builtins
# flake8-eradicate
# pep8-naming
# flake8-isort
# flake8-rst-docstrings
# flake8-rst
# darglint
# flake8-copyright
# flake8-ownership
