[metadata]
description-file = README.md

[aliases]
test=pytest

[tool:pytest]
addopts = --ignore=scripts

[flake8]
ignore = W503
# ignore error 203 too
# but append it to any other errors we want to ignore
extend-ignore = E203
per-file-ignores =
    alembic/*.py: B,C,E,W,T4,B9,F,D
    scripts/*.py: D
    hera_mc/tests/*.py: D
docstring-convention = numpy
select = C,E,W,T4,B9,F,D,A
# want to go to the list below, but there are a lot of changes to do so
# select = B,C,E,W,T4,B9,F,D,A,N,RST
max-line-length = 100
# List of other checks to consider adding:
# it's recommended to have max-complexity ~ 18
# max-complexity = 18
# flake8-quotes
# flake8-black
# flake8-eradicate
# pep8-naming
# flake8-isort
# flake8-rst-docstrings
# flake8-rst
# darglint
# flake8-copyright
# flake8-ownership
