[metadata]
description-file = README.md

[aliases]
test=pytest

[tool:pytest]
addopts = --ignore=scripts

[flake8]
# B905 is for using zip without the `strict` argument, which was introduced in
# python 3.10. We should probably add this check (remove it from the ignore) when we
# require 3.10.
ignore = W503, E203, B905
per-file-ignores =
    alembic/*.py: B,C,E,W,T4,B9,F,D
    scripts/*.py: D
    hera_mc/tests/*.py: D
docstring-convention = numpy
select = C,E,W,T4,B9,F,D,A
# want to go to the list below, but there are a lot of changes to do so
# select = B,C,E,W,T4,B9,F,D,A,N,RST
max-line-length = 100
# List of other checks to consider adding:
# it's recommended to have max-complexity ~ 18
# max-complexity = 18
# flake8-quotes
# flake8-black
# flake8-eradicate
# pep8-naming
# flake8-isort
# flake8-rst-docstrings
# flake8-rst
# darglint
# flake8-copyright
# flake8-ownership
